chore: tmux update

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # 基本設定
 ## 256色端末を使用する
 set -g default-terminal "screen-256color"
-set -g terminal-overrides 'xterm:colors=256'
+set -g terminal-overrides 'xterm:colors=235'
 ## Escキーの遅延を解消
 set -s escape-time 0
 ## status line を更新する間隔を1秒にする
@@ -20,7 +20,7 @@ set -g prefix C-j
 ## prefix + -で水平分割
 bind - split-window -v
 ## prefix + | で垂直分割
-bind / split-window -h
+bind \\ split-window -h
 ## ペインの移動をprefixなしで行う（Shift + 矢印キー）
 bind -n S-Left select-pane -L
 bind -n S-Down select-pane -D
